style-fix: working on some of the styling for mobile devices to accomodate for the keyboard on mobile phones

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -25,3 +25,13 @@
         border-radius: 16px 16px 0 0;
     }
 }
+
+@media (max-width: 767px) {
+    #content_wrapper {
+        width: 90vw;
+
+    .header_wrapper {
+        width: 90vw;
+    }
+    }
+}
